Fix errors contact.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,25 +35,25 @@
           <h3>Envianos tu consulta</h3>
           <!-- Nombre -->
           <div class="form-control">
-            <label for="">Nombre</label>
-            <input type="text" name="" id="name" placeholder="Ej: Juan" />
+            <label for="name">Nombre</label>
+            <input type="text" name="name" id="name" placeholder="Ej: Juan" />
           </div>
 
           <!-- Teléfono -->
           <div class="form-control">
-            <label for="">Teléfono</label>
+            <label for="phone">Teléfono</label>
             <input type="tel" name="phone" id="phone" placeholder="Ej: 11 1234 5678" />
           </div>
 
           <!-- Mail -->
           <div class="form-control">
-            <label for="">Mail</label>
+            <label for="email">Mail</label>
             <input type="email" name="email" id="email" placeholder="Ej: email@example.com" />
           </div>
 
           <!--Select Cantidad Mascotas -->
           <div class="form-select">
-            <label for="">Cuantas mascotas tenes?</label>
+            <label for="pet-number">Cuantas mascotas tenes?</label>
             <select name="pet-number" id="pet-number" class="form-select">
               <option value="0">Ninguna</option>
               <option value="1">1</option>
@@ -66,7 +66,7 @@
 
           <!-- Raddio button Perro o Gato -->
           <div class="form-radio">
-            <label for="">Que prefieres?</label>
+            <label for="radio-cat-dog">Que prefieres?</label>
             <div class="radio-cat-dog">
               <input type="radio" id="dog" name="cat-dog"/>
               <label for="dog" class="label-dog-cat">Perros</label>
@@ -118,7 +118,6 @@
         <li><a href="/templates/contact.html">Contacto</a></li>
       </ul>
     </nav>
-    </div>
 
     <!-- Payment methods -->
     <div class="payment-methods">
