--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -12,33 +12,33 @@
 <body>
     <!-- Header -->
     <header>
-        <!-- Hyper links -->
+        <!-- Links -->
         <div>
 
         </div>
     </header>
-    <!-- Form -->
+    <!-- Formulario -->
     <div class="container">
         <a href="../index.html">
             <img src="/static/img/icon.ico" alt="Your Image" class="center-image">
         </a>
-        <!-- Form for register-->
+        <!-- Formulario de registro-->
         <form action="/submit_registration" method="post">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name"><br>
+            <label for="nombre">Nombre:</label><br>
+            <input type="text" id="nombre" name="nombre"><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
-            <label for="phone">Phone (optional):</label><br>
-            <input type="tel" id="phone" name="phone"><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password"><br>
-            <label for="confirm-password">Confirm Password:</label><br>
-            <input type="password" id="confirm-password" name="confirm-password"><br>
-            <span>Already have an account?</span>
+            <label for="telefono">Telefono (opcional):</label><br>
+            <input type="telefono" id="telefono" name="telefono"><br>
+            <label for="contra">Contraseña:</label><br>
+            <input type="contra" id="contra" name="contra"><br>
+            <label for="confirme-contra">Confirme la contraseña:</label><br>
+            <input type="contra" id="confirme-contra" name="confirme-contra"><br>
+            <span>Ya tiene una cuenta?</span>
             <ul>
-                <li><a href="/templates/sign_in.html">Sign in →</a></li>
+                <li><a href="/templates/sign_in.html">Registrese →</a></li>
             </ul>
-            <button>Create acount</button>
+            <button>Crear cuenta nueva</button>
         </form>
     </div>
 </body>
