--- a/templates/product.html
+++ b/templates/product.html
@@ -32,21 +32,21 @@
 <section class="products">
     <div>
         <img src="/static/img/product1.webp" alt="">
-        <h3>Producto 1</h3>
-        <p>Descripcion 1</p>
+        <h3>Purina Cat Chow</h3>
+        <p>para gatos adultos 18kg</p>
         <p>$100.00</p>
     </div>
     <div>
-        <img src="/static/img/product2.webp" alt="">
-        <h3>Producto 2</h3>
-        <p>Descripción del producto 2</p>
-        <p>$200.00</p>
+        <img src="/static/img/producto7.jpeg" alt="">
+        <h3>Royal Cann</h3>
+        <p>para gatos medianos 18kg</p>
+        <p>$400.00</p>
     </div>
     <div>
-        <img src="/static/img/product3.webp" alt="">
-        <h3>Producto 3</h3>
-        <p>Descripción del producto 3</p>
-        <p>$300.00</p>
+        <img src="/static/img/producto8.jpeg" alt="">
+        <h3>Royal Cann Savour Exigent</h3>
+        <p>Para gatos adultos 28kg</p>
+        <p>$700.00</p>
     </div>
     <div>
         <img src="/static/img/product4.webp" alt="">
@@ -57,30 +57,30 @@
 </section>
 <!-- separator -->
 <h2>PERROS</h2>
-<!-- products -->
+<!-- productos -->
 <section class="products">
     <div>
         <img src="/static/img/product5.webp" alt="">
-        <h3>Producto 1</h3>
-        <p>Descripción del producto 1</p>
-        <p>$100.00</p>
+        <h3>Eukanuba</h3>
+        <p>Para perros adultos razas grandes 18kg</p>
+        <p>$500.00</p>
     </div>
     <div>
         <img src="/static/img/product6.webp" alt="">
-        <h3>Producto 2</h3>
-        <p>Descripción del producto 2</p>
-        <p>$200.00</p>
+        <h3>Old Prince Equilibrum</h3>
+        <p>Para perros razas grandes y medianas 23kg</p>
+        <p>$600.00</p>
     </div>
     <div>
         <img src="/static/img/product2.webp" alt="">
-        <h3>Producto 3</h3>
-        <p>Descripción del producto 3</p>
-        <p>$300.00</p>
+        <h3>Purina Dog Chow</h3>
+        <p>Para perros adultos medianos y grandes 24kg</p>
+        <p>$200.00</p>
     </div>
     <div>
         <img src="/static/img/product4.webp" alt="">
-        <h3>Producto 4</h3>
-        <p>Descripción del producto 4</p>
+        <h3>Royal Cann</h3>
+        <p>Para perros adultos 18kg</p>
         <p>$400.00</p>
     </div>
 </section>
