agrege productos pocos, con imagenes nuevas

--- a/templates/product.html
+++ b/templates/product.html
@@ -34,7 +34,7 @@
         <img src="/static/img/product1.webp" alt="">
         <h3>Purina Cat Chow</h3>
         <p>para gatos adultos 18kg</p>
-        <p>$100.00</p>
+        <p>$200.00</p>
     </div>
     <div>
         <img src="/static/img/producto7.jpeg" alt="">
@@ -49,10 +49,10 @@
         <p>$700.00</p>
     </div>
     <div>
-        <img src="/static/img/product4.webp" alt="">
-        <h3>Producto 4</h3>
-        <p>Descripción del producto 4</p>
-        <p>$400.00</p>
+        <img src="/static/img/royal-cann.jpeg" alt="">
+        <h3>Royal Cann</h3>
+        <p>Para gatos castrados 3kg</p>
+        <p>$100.00</p>
     </div>
 </section>
 <!-- separator -->
@@ -82,6 +82,18 @@
         <h3>Royal Cann</h3>
         <p>Para perros adultos 18kg</p>
         <p>$400.00</p>
+    </div>
+    <div>
+        <img src="/static/img/exc-pur-adul.jpeg" alt="">
+        <h3>Purina Excellent</h3>
+        <p>Para perros adultos 3kg</p>
+        <p>$100.00</p>
+    </div>
+    <div>
+        <img src="/static/img/ro-cann.jpeg" alt="">
+        <h3>Royal Cann MINI</h3>
+        <p>Para perros raza pequeña 3kg</p>
+        <p>$100.00</p>
     </div>
 </section>
     <footer>
