Fix error contact.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,7 +31,7 @@
     <div class="box_form_ubication">
       <!-- Formulario Contacto -->
       <div class="form_box">
-        <form action="" method="POST" id="form_contact" class="contact_form">
+        <form action="#" method="POST" id="form_contact" class="contact_form">
           <h3>Envianos tu consulta</h3>
           <!-- Nombre -->
           <div class="form-control">
@@ -66,7 +66,7 @@
 
           <!-- Raddio button Perro o Gato -->
           <div class="form-radio">
-            <label for="radio-cat-dog">Que prefieres?</label>
+            <label for="cat-dog">Que prefieres?</label>
             <div class="radio-cat-dog">
               <input type="radio" id="dog" name="cat-dog"/>
               <label for="dog" class="label-dog-cat">Perros</label>
