--- a/templates/contact.html
+++ b/templates/contact.html
@@ -66,7 +66,7 @@
 
           <!-- Raddio button Perro o Gato -->
           <div class="form-radio">
-            <label for="cat-dog">Que prefieres?</label>
+            <label for="dog">Que prefieres?</label>
             <div class="radio-cat-dog">
               <input type="radio" id="dog" name="cat-dog"/>
               <label for="dog" class="label-dog-cat">Perros</label>
